# utf8proc_s7

./: .bazelrc  BUILD.bzl  LICENSE  MODULE.bazel  README.md
config/cc/: CONFIG.bzl
lib/: BUILD.bazel
lib/clibgen/: BUILD.bazel
src/: BUILD.bazel
test/: BUILD.bazel  BUILD.bzl  MODULE.bazel  utf8proc_test.c
