module(
    name                = "utf8proc_s7",
    version             = "2.8.0.bzl.8",
    compatibility_level = 2,
    bazel_compatibility = [">=8.0.0"]
)

## bcr:
bazel_dep(name = "platforms",      version = "0.0.11")
bazel_dep(name = "rules_cc",       version = "0.1.1")

## obazl:
bazel_dep(name = "liblogc",        version = "3.0.0")
bazel_dep(name = "obazl_tools_cc",version = "3.0.0")
git_override(module_name = "obazl_tools_cc",
             branch  = "3.0.0.dev",
             remote = "https://github.com/obazl/obazl_tools_cc.git"
             )
bazel_dep(name = "libs7",          version = "3.0.0")
git_override(module_name = "libs7",
             branch  = "3.0.0.dev",
             remote = "https://github.com/libs7/libs7.git")
# libs7 dep:
bazel_dep(name = "runfiles",        version = "3.0.0")
# local_path_override(module_name="runfiles",
#                     path="/Users/gar/obazlc/runfiles")
git_override(module_name = "runfiles",
             branch  = "3.0.0.dev",
             remote = "https://github.com/obazl/runfiles.git")

bazel_dep(name = "utf8proc",       version = "2.8.0.bzl.8")
git_override(module_name = "utf8proc",
             branch  = "bazel",
             remote = "https://github.com/obazl/utf8proc.git")

## dev dependencies
bazel_dep(name = "gopt",           version = "10.0.0",
          dev_dependency=True)
bazel_dep(name = "uthash",         version = "2.3.0.bzl",
          dev_dependency=True)
bazel_dep(name = "unity",          version = "2.6.1.bzl",
          dev_dependency=True)

