load("@rules_cc//cc:defs.bzl", "cc_test")

load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")

# load("//:BUILD.bzl",
#      "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
#      "BASE_COPTS", "BASE_DEFINES", "BASE_LINKOPTS",
#      "TIMEOUT")

DEPS          = [
    "//lib:utf8proc_s7",
    # "@gopt//lib:gopt",
    # "@unity//lib:unity",
    # "@uthash//lib:uthash",
    # "@liblogc//lib:logc"
]
SRCS          = [] # BASE_SRCS + ["common.c", "common.h"]
INCLUDE_PATHS = []
# BASE_INCLUDE_PATHS + [
    # "-Isrc",
    # "-Itest",
    # "-Iexternal/gopt~{}/lib".format(GOPT_VERSION),
    # "-Iexternal/unity~{}/lib".format(UNITY_VERSION),
    # "-Iexternal/uthash~{}/lib".format(UTHASH_VERSION),
    # "-Iexternal/liblogc~{}/lib".format(LIBLOGC_VERSION)
# ]
COPTS         = INCLUDE_PATHS
DEFINES       = []
LINKOPTS      = []
TIMEOUT = "short"

################################################################
# exports_files(["common.c", "common.h"])

test_suite(
    name  = "test",
    tests = [
        ":utf8proc_test"
    ]
)

s7_plugin_test(
    name = "utf8proc_test",
    srcs = SRCS + ["utf8proc_test.c"],
    local_defines = DEFINES,
    deps = DEPS,
    copts = COPTS,
    linkopts = LINKOPTS,
    timeout  = TIMEOUT,
)

